--- a/frontend/index.css
+++ b/frontend/index.css
@@ -3,8 +3,15 @@ background-color: blue;
 }
 
 
+#fondo{
 
+background-image: url("https://www.crcienciayrobotica.com/wp-content/uploads/2019/07/banner-01.jpg");
+align-items: center;
+text-align: center;
+opacity: 20;
+color: white;
 
+}
 
 
 img{
@@ -23,7 +30,7 @@ img{
 
 .infectado{
 
-    color:blue;
+    color:red;
 }
 
 
@@ -40,15 +47,15 @@ img{
     z-index: 1000;
     max-width: 200px;
     display: none;
-    color: #343434;
+    color: #5969ff';
 }
 
 
 /* For all zoom buttons */
 .mapael .zoomButton {
-    background-color: #fff;
-    border: 1px solid #ccc;
-    color: #000;
+    background-color:blue !important;
+    border: 1px solid green;
+    color:white;
     width: 15px;
     height: 15px;
     line-height: 15px;
@@ -58,7 +65,7 @@ img{
     position: absolute;
     top: 0;
     font-weight: bold;
-    left: 10px;
+    left: 15px;
 
     -webkit-user-select: none;
     -khtml-user-select : none;
@@ -85,11 +92,16 @@ img{
 
 .mapael .map {
     position: relative;
-    background-color:#D1ECF1;
+    background-color:red ;
 }
 
 .fondodiv{
    background-color: #77BA5D;
    color:white; 
    
+}
+#divos{
+    background-color: rgba(0, 0, 0, 0.315);
+    height: 100% !important;
+  width: 100% !important;
 }
